re PR c++/27384 (ICE with invalid array size)

PR middle-end/27384
	* fold-const.c (size_binop): Move sanity check for arguments to
	the beginning of the function.

	* g++.dg/other/fold1.C: New test.

From-SVN: r113701